--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 				<div class="col-sm-6 col-md-4 grid-portfolio">
 					<div class="portfolio-item-ct">
 						<div class="thumbnail">
-							<img src="ideazone.png" alt="ideazone" class="img-responsive">
+							<img src="http://i65.tinypic.com/2ynmiw1.png" alt="ideazone" class="img-responsive">
 							<div class="textbox-portfolio">
 								<div class="button-weblink">
 									<a href="https://github.com/sreekanthkasani/IZone" alt="Portfolio - IBV MEXICO" target="_blank"><span class="fa fa-link portfolio-link" aria-hidden="true"></span></a>
@@ -343,7 +343,7 @@
 				<div class="col-sm-6 col-md-4 grid-portfolio">
 					<div class="portfolio-item-ct">
 						<div class="thumbnail">
-							<img src="webql.png" alt="Portfolio - ARE YOU FEELING LOW?" class="img-responsive">
+							<img src="http://i68.tinypic.com/2vx13qv.png" alt="Portfolio - ARE YOU FEELING LOW?" class="img-responsive">
 							<div class="textbox-portfolio">
 								<div class="button-weblink">
 									<a href="https://github.com/sreekanthkasani/scms" target="_blank" alt="Portfolio - ARE YOU FEELING LOW?"><span class="fa fa-link portfolio-link" aria-hidden="true"></span></a>
@@ -369,7 +369,7 @@
 				<div class="col-sm-6 col-md-4 grid-portfolio">
 					<div class="portfolio-item-ct">
 						<div class="thumbnail">
-							<img src="sih.png" alt="Portfolio - PERSONAL WEBSITE" class="img-responsive">
+							<img src="http://i68.tinypic.com/iqzng1.png" alt="Portfolio - PERSONAL WEBSITE" class="img-responsive">
 							<div class="textbox-portfolio">
 								<div class="button-weblink">
 									<a href="https://github.com/sreekanthkasani/code4me" alt="visualization"><span class="fa fa-link portfolio-link" aria-hidden="true"></span></a>
