--- a/index.html
+++ b/index.html
@@ -105,9 +105,8 @@
 					</div>
 				</div>
 				<div class="col-lg-8 about-intro-text">
-					<p>I'm a <span>front-end developer</span> and a <span>photojournalist enthusiast</span>.<br> My first experience with code was at the time everybody had a MySpace profile. I remember struggling with finding the way to change the background-color and
-						have flashy text. I used to spend hours trying to customize it and couldn't even seem to see the time get by. The excitement of having the power to structure pages on my own was amazing. It's just like lego. You start piece by piece, nobody understands
-						what you're building and tada... you have a castle.<br> Here's to building castles with code! <span class="fa fa-beer" aria-hidden="true"></span></p>
+					<p>I'm a <span>undergraduate in computer science</span> and a <span>tech lover</span>.<br> In spite of being fresher, I have involved in various projects and hackathons and understand the importance of time management and open communication. as I am a computer enthusiast with a good knowledge of data structures and object-oriented principles makes me completely adaptive and quick learner of any technologies.<br> 
+                    I truly believe in continued education and research and continue to seek new software and methods to assist with product development. <span class="fa fa-beer" aria-hidden="true"></span></p>
 					<div class="button-group">
 						<div class="text">Download CV</div>
 						<div class="icon-cv"><a href="https://github.com/sreekanthkasani/IZone/raw/master/resume_postman.pdf" alt="sreekanthkasani CV" target="_blank"><span class="fa fa-arrow-circle-down" aria-hidden="true"></span></a></div>
