--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- icon -->
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-	<link href="favicon.ico" rel="shortcut icon">
 	<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+	<link rel="shortcut icon" href="" />
 	
 	<!-- css -->
 	<link rel="stylesheet" type="text/css" href="loading.css">
