--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 	                Avid self-learner, proactive, organized and dedicated to everything I do.">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- icon -->
-	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-	<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
-	<link rel="shortcut icon" href="" />
+        <link rel="shortcut icon" type="image/png" href="http://i63.tinypic.com/314rzpw.png"/>
+        <link rel="shortcut icon" type="image/png" href="http://i63.tinypic.com/314rzpw.png"/>
 	
 	<!-- css -->
 	<link rel="stylesheet" type="text/css" href="loading.css">
