--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<div id="status">&nbsp;</div>
 		<div class="loading-container">
            <div class="loading"></div>
-           <div id="loading-text">loading</div>
+           <div id="loading-text">welcome</div>
        </div>
 	</div>
 	<!-- END PRELOADER -->
